# Sistema_Locadora

./: CMakeLists.txt  categoria.c  categoria.h  categorias.txt  cliente.c  cliente.h  clientes.txt  export.c  export.h  feedback.c  feedback.h  filme.c  filme.h  filmes.txt  fornecedor.c  fornecedor.h  fornecedores.txt  funcGlobais.c  funcGlobais.h  funcionario.c  funcionario.h  funcionario.txt  locadora.c  locadora.h  locadora.txt  main.c  sistema_locadora.exe.stackdump
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
